# ChangeLog for dev-python/twisted
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.102 2009/01/08 23:25:18 patrick Exp $

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> +twisted-1.3.0.ebuild:
  Readding 1.3.0. Ooopsie ...

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> -twisted-1.2.0.ebuild,
  -twisted-1.3.0.ebuild, -twisted-2.0.1.ebuild, -twisted-2.1.0.ebuild,
  -twisted-2.2.0.ebuild, -twisted-2.4.0.ebuild, -twisted-2.5.0.ebuild,
  -twisted-8.0.1.ebuild:
  Remove old

*twisted-8.2.0 (08 Jan 2009)

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> +twisted-8.2.0.ebuild:
  Bump to 8.2.0

  20 Dec 2008; nixnut <nixnut@gentoo.org> twisted-8.1.0.ebuild:
  Stable on ppc wrt bug 231675

  04 Sep 2008; Rob Cakebread <pythonhead@gentoo.org> twisted-8.1.0.ebuild:
  Remove test if not using Python 2.5+ bug# 234370

  13 Aug 2008; Santiago M. Mola <coldwind@gentoo.org> twisted-8.1.0.ebuild:
  amd64 stable wrt bug #231675

  08 Aug 2008; Raúl Porcel <armin76@gentoo.org> twisted-8.1.0.ebuild:
  alpha/ia64/x86 stable wrt #231675

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> twisted-8.1.0.ebuild:
  Stable on ppc64; bug #231675

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> twisted-8.1.0.ebuild:
  Stable for HPPA (bug #231675).

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  05 Aug 2008; Ferris McCormick <fmccor@gentoo.org> twisted-8.1.0.ebuild:
  Sparc stable, part of Bug #231675.

*twisted-8.1.0 (25 May 2008)

  25 May 2008; Thomas Raschbacher <lordvan@gentoo.org> twisted-1.2.0.ebuild,
  twisted-1.3.0.ebuild, +twisted-8.1.0.ebuild:
  Version bump to 8.1.0 + some minor fixes to older ebuilds

*twisted-8.0.1 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org> +twisted-8.0.1.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml: